[package]
name = "portside"
version = "0.1.0"
authors = ["Borna Cvitanić <borna.cvitanic@gmail.com>"]
description = "Shared workspace-discovery core for the freight suite of cargo-* developer tools."
repository = "https://github.com/bornacvitanic/portside"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["cargo", "workspace", "metadata", "freight"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
# Deserialize the `cargo metadata` JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
