[package]
name = "portside"
version = "0.2.0"
authors = ["Borna Cvitanić <borna.cvitanic@gmail.com>"]
description = "Shared workspace-discovery core for the freight suite of cargo-* developer tools."
repository = "https://github.com/bornacvitanic/portside"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["cargo", "workspace", "metadata", "freight"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[features]
default = []
# Shared TUI chrome (palette, glyphs, brand, log console) for the suite's
# terminal tools. Off by default so discovery-only users stay ratatui-free.
tui = ["dep:ratatui"]

[dependencies]
# Deserialize the `cargo metadata` JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TUI chrome — optional, behind the `tui` feature.
ratatui = { version = "0.29", optional = true }
